--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ classifiers = [
 dependencies = [
     "pep517 >= 0.9.1",
     "dataclasses-json >= 0.5.7",
+    "pydantic >= 1.9.0",
+    "google-auth >= 2.12.0",
 ]
 
 [project.optional-dependencies]
