add demo dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,11 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+demo = [
+    "fastapi",
+    "uvicorn",
+]
+
 docs = [
     "codecov",
     "coverage",
