--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,12 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       max-parallel: 4
       matrix:
         python-version: [3.9, 3.8, '3.10', 3.11]
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
 
     steps:
     - name: Checkout repo
