--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       max-parallel: 4
       matrix:
-        python-version: [3.9, 3.8, '3.10', 3.11]
+        python-version: [3.9, '3.10', 3.11]
         os: [ubuntu-latest, macos-latest, windows-latest]
 
 
