--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       max-parallel: 4
       matrix:
-        python-version: [3.9, '3.10', 3.11]
+        python-version: [3.9, '3.10', 3.11, 3.12]
         os: [ubuntu-latest, macos-latest, windows-latest]
 
 
@@ -24,10 +24,7 @@ jobs:
     - name: Install the package and its dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .[docs,test,demo]
-    - name: Check Dependencies
-      run: |
-        pipconflictchecker
+        pip install .[test]
     - name: Lint
       run: |
         flake8 .
