--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,12 @@ jobs:
     - name: Install the package and its dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ".[test]"
+        pip install .
     - name: Lint
       run: |
+        pip install flake8
         flake8 .
     - name: Test
       run: |
+        pip install pytest
         cd && mkdir for_test && cd for_test && pytest -svv --pyargs gapps  --durations=0
